RESOLVED FIXED212616
Correct misunderstandings on how ThreadSpecific work
https://bugs.webkit.org/show_bug.cgi?id=212616
Summary Correct misunderstandings on how ThreadSpecific work
Saam Barati
Reported 2020-06-01 15:07:52 PDT
We have some redundant code in JSC
Attachments
patch (7.41 KB, patch)
2020-06-01 15:17 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2020-06-01 15:17:52 PDT
Michael Saboff
Comment 2 2020-06-01 15:25:17 PDT
Comment on attachment 400764 [details] patch r=me. Thanks.
EWS
Comment 3 2020-06-01 17:51:57 PDT
Committed r262402: <https://trac.webkit.org/changeset/262402> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400764 [details].
Radar WebKit Bug Importer
Comment 4 2020-06-01 17:52:14 PDT
Note You need to log in before you can comment on or make changes to this bug.