Source/JavaScriptCore/wasm/WasmWorklist.cpp
@@ -117,12 +117,6 @@ private:
         return complete(holdLock(*worklist.m_lock));
     }
 
-    void threadIsStopping(const AbstractLocker&) final
-    {
-        clearLLIntThreadSpecificCache();
-        clearAssembleDataThreadSpecificCache();
-    }
-
     const char* name() const final
     {
         return "Wasm Worklist Helper Thread";
